Nudge the order-buttons over to avoid a horizontal scrollbar

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -341,6 +341,10 @@ div.tooltip:hover > span {
   transform: rotate(270deg);
 }
 
+#order-buttons {
+  padding-right: 12px;
+}
+
 #order-buttons .inline {
   display: inline;
 }
